--- a/language.tex
+++ b/language.tex
@@ -1804,7 +1804,7 @@ and the condition after the colon the role of the body.
 \index{safety!show, \code{\#show}}
 \end{note}
 
-\paragraph{Const Statements}
+\paragraph{Const Statements}\label{subset:gringo:meta:const}
 \index{meta-statement!const, \code{\#const}}%
 Constants appearing in a logic program may actually be placeholders for
 concrete values provided by a user.
