--- a/trunk/potassco_guide/heuristic.tex
+++ b/trunk/potassco_guide/heuristic.tex
@@ -14,6 +14,8 @@ we first describe how to modify the solver's heuristic from within a logic progr
 then we explain how to apply modifications from the command line, 
 and finally we show how to compute subset minimal answer sets with heuristics.
 
+The following description conforms with \clingo~5.%1.1.
+
 \subsection{Heuristic Programming}
 \index{heuristic predicate}
 Heuristic information is represented within a logic program my means of heuristic directives of the form
