--- a/prefopt.tex
+++ b/prefopt.tex
@@ -31,7 +31,7 @@ While \asprin\ comes with a library of predefined preference types
 it is readily extensible by new customized preference types.
 For a formal description of \asprin, please consult~\cite{brderosc15a}.
 
-The following description conforms with \asprin~3.0.%1.1.
+The following description conforms with \asprin~3.0, which uses \clingo~5.%1.1.
 
 \subsubsection{Computing optimal answer sets}
 
