--- a/trunk/potassco_guide/frontpage.tex
+++ b/trunk/potassco_guide/frontpage.tex
@@ -42,8 +42,16 @@ This work is licensed under a Creative Commons Attribution-ShareAlike 4.0\\ Inte
 
 \bigskip
 \noindent
-The guide generally refers to \gringo\ and \clingo\ series 4 as well as \clasp\ series 3;
+Version 2.0.0 of this guide generally refers to \gringo\ and \clingo\ series 4 as well as \clasp\ series 3;
 full conformity is obtained with \gringo~4.5, \clingo~4.5 and \clasp~3.1.
+
+\smallskip
+\noindent
+Version 2.1.0 of this guide upgrades Section~\ref{sec:heuristic} to \clingo{} series~5,
+and Section~\ref{sec:asprin} to \asprin~3.0, using \clingo~5.
+
+\medskip
+\noindent
 Please make sure that you have corresponding (or later) versions available.
 
 \vfill
@@ -68,7 +76,7 @@ Second edition, \today\ % \ (\SVNREVISION)
 
 \bigskip
 \noindent
-{\LARGE\bf\url{http://potassco.sourceforge.net}}
+{\LARGE\bf\url{http://potassco.org}}
 
 
 
