--- a/trunk/potassco_guide/prefopt.tex
+++ b/trunk/potassco_guide/prefopt.tex
@@ -18,7 +18,7 @@ can be obtained at the following references.
 
 \begin{itemize}
 \item Optimization \cite{gekakasc11b,gekakasc11c,gekasc11b,ankamasc12a}
-\item Video series on \clasp's optimization capacities \url{http://potassco.sourceforge.net/videos.html}
+\item Video series on \clasp's optimization capacities \url{http://potassco.org/doc/videos}
 \item Consult Section~\ref{subsec:gringo:optimize} for language constructs expressing multi-criteria optimization.
 \item Consult Section~\ref{subsec:clasp:solving} and~\ref{subsec:clasp:tune} for relevant \clasp\ options configurating the optimization process.
 \end{itemize}
